codex-rs/core/tests/suite/snapshots/all__suite__compact__compaction_cold_resume_after_completion.snap
---
source: core/tests/suite/compact.rs
assertion_line: 4543
expression: "format_history_snapshot(\"Real paginated mid-turn compaction and cold resume from the bounded suffix.\",\n&requests,)"
---
Scenario: Real paginated mid-turn compaction and cold resume from the bounded suffix.

## Window 1
-- request 1 (turn) --
00:message/developer[3]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <COLLABORATION_MODE>
01:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    Child agents can also spawn their own sub-agents.
    <OMITTED 16 LINES; ~234 TOKENS; hash=b2e94283a8c22327>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...fork_turns` to `"none"` or a positive integer string. [hash=db3545796947884f]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    function call limit push

## Window 2 (after request 1: settings changed (parallel_tool_calls, tools))
-- request 2 (compaction) --
00:message/developer[3]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <COLLABORATION_MODE>
01:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    Child agents can also spawn their own sub-agents.
    <OMITTED 16 LINES; ~234 TOKENS; hash=b2e94283a8c22327>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...fork_turns` to `"none"` or a positive integer string. [hash=db3545796947884f]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    function call limit push
04:function_call/test_tool:{}
05:function_call_output:unsupported call: test_tool
06:message/user:
    <SUMMARIZATION_PROMPT>

## Window 3 (after request 2: input diverged at item 04, settings changed (parallel_tool_calls, tools))
-- request 3 (turn) --
00:message/developer[3]:
    [01] <context_continuation>
        The runtime manages context compaction or rollover. Context-window capacity is not a task deadline or th...real failures accurately instead of claiming success. [hash=1eca8308a77806e2]
        </context_continuation>
    [02] <PERMISSIONS_INSTRUCTIONS>
    [03] <COLLABORATION_MODE>
01:message/developer:
    You are `/root`, the primary agent in a team of agents collaborating to fulfill the user's goals.

    At the start of your turn, you are the active agent.
    You can spawn sub-agents to handle subtasks, and those sub-agents can spawn their own sub-agents.
    All agents in the team, including the agents that you can assign tasks to, are equally intelligent and capable, and have access to the same set of tools.

    You can use `spawn_agent` to create a new agent, `followup_task` to give an existing agent a new task an...message to a running agent without triggering a turn. [hash=7d40ff8b58977202]
    Child agents can also spawn their own sub-agents.
    <OMITTED 16 LINES; ~234 TOKENS; hash=b2e94283a8c22327>
    - All agents use the same current working directory.
    - As a result, edits made by one agent are immediately visible to all other agents.

    When calling `wait_agent`, prefer longer waits (minutes) to avoid busy polling.

    There are 4 available concurrency slots, meaning that up to 4 agents can be active at once, including you.

    Full-history forks (`fork_turns` omitted or `"all"`) inherit the parent model and reasoning effort and d...fork_turns` to `"none"` or a positive integer string. [hash=db3545796947884f]
02:message/developer:
    <MULTI_AGENT_MODE>
03:message/user:
    function call limit push
04:message/user:
    <COMPACTION_SUMMARY>
    AUTO_SUMMARY
-- request 4 (turn) --
05:message/assistant:
    continued
06:message/user:
    continue after cold resume
